ls-tokyo/kubekube/ns-wolzip/50-hollo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hollo
  namespace: wolzip
  labels:
    app: hollo
spec:
  type: NodePort
  selector:
    app: hollo
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hollo
  namespace: wolzip
  labels:
    app: hollo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hollo
  template:
    metadata:
      labels:
        app: hollo
    spec:
      containers:
        - name: hollo
          image: ghcr.io/fedify-dev/hollo:0.5.5
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
