ls-tokyo/kubekube/ns-wolzip/51-ato-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ato-server
  namespace: wolzip
  labels:
    app: ato-server
spec:
  type: NodePort
  selector:
    app: ato-server
  ports
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ato-server
  namespace: wolzip
  labels:
    app: ato-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ato-server
  template:
    metadata:
      labels:
        app: ato-server
    spec:
      containers:
        - name: ato-server
          image: ghcr.io/hellodhlyn/ato:v0.1.1
          command: ["/ato"]
          args: ["server"]
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: ato-server-port
          livenessProbe:
            httpGet:
              path: /ping
              port: ato-server-port
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: ato-server-port
            initialDelaySeconds: 10
